RESOLVED FIXED78431
DFG::SpeculativeJIT calls fprintf() instead of dataLog in terminateSpeculativeExecution()
https://bugs.webkit.org/show_bug.cgi?id=78431
Summary DFG::SpeculativeJIT calls fprintf() instead of dataLog in terminateSpeculativ...
Filip Pizlo
Reported 2012-02-11 19:44:53 PST
Patch forthcoming.
Attachments
the patch (1.22 KB, patch)
2012-02-11 19:49 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2012-02-11 19:49:29 PST
Created attachment 126667 [details] the patch
WebKit Review Bot
Comment 2 2012-02-12 00:00:07 PST
Comment on attachment 126667 [details] the patch Clearing flags on attachment: 126667 Committed r107503: <http://trac.webkit.org/changeset/107503>
WebKit Review Bot
Comment 3 2012-02-12 00:00:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.