DFG::SpeculativeJIT calls fprintf() instead of dataLog in terminateSpeculativeExecution() https://bugs.webkit.org/show_bug.cgi?id=78431

Reviewed by Gavin Barraclough.

* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::terminateSpeculativeExecution):


Canonical link: https://commits.webkit.org/95365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107503 268f45cc-cd09-0410-ab3c-d52691b4dbfc